--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t reverseproxy ./udagram-reverseproxy
-  - docker tag udagram-reverseproxy ahmedelsherbini/reverseproxy:latest
+  - docker tag reverseproxy ahmedelsherbini/reverseproxy:latest
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker tag udagram-api-feed ahmedelsherbini/udagram-api-feed:latest
   - docker build -t udagram-api-user ./udagram-api-user
